wxc/include/ewxw/wxc_glue.h

void       wxIcon_CopyFromBitmap( TSelf(wxIcon) _obj, TClass(wxBitmap) bmp );
TClass(wxIcon) wxIcon_CreateDefault(  );
TClass(wxIcon) wxIcon_CreateLoad( TStringVoid name, long type, TSize(width,height) );
void       wxIcon_Delete( TSelf(wxIcon) _obj );
TClass(wxIcon) wxIcon_FromRaw( TSelf(wxIcon) data, TSize(width,height) );
TClass(wxIcon) wxIcon_FromXPM( TSelf(wxIcon) data );
int        wxIcon_GetDepth( TSelf(wxIcon) _obj );
int        wxIcon_GetHeight( TSelf(wxIcon) _obj );
int        wxIcon_GetWidth( TSelf(wxIcon) _obj );
TBool      wxIcon_IsEqual( TSelf(wxIcon) _obj, void* other );
int        wxIcon_Load( TSelf(wxIcon) _obj, TStringVoid name, long type, TSize(width,height) );
TBool      wxIcon_Ok( TSelf(wxIcon) _obj );